<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="TextView"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="212dp"
        android:layout_height="15dp"
        android:layout_marginStart="16dp"
        android:text="TextView"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvName" />

    <Button
        android:id="@+id/btnEditTracking"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_marginEnd="4dp"
        android:text="@string/edit"
        android:textSize="10sp"
        android:backgroundTint="#168AAD"
        app:layout_constraintEnd_toStartOf="@+id/btnDeleteTracking"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <Button
        android:id="@+id/btnDeleteTracking"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_marginEnd="16dp"
        android:text="@string/delete"
        android:textSize="10sp"
        android:backgroundTint="#168AAD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />
</androidx.constraintlayout.widget.ConstraintLayout>