...
                app:title="@string/app_name" />

        </com.google.android.material.appbar.AppBarLayout>


        <FrameLayout
            android:id="@+id/flFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
...
